--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,13 @@
     font-family: 'Open Sans', sans-serif;;
 }
 
+:root {
+    --azul-marinho-escuro: #132235;
+    --azul-claro: #6DDAD3;
+}
+
 .container {
     padding-left: 6%;
     padding-right: 6%;
 }
+
