alteracao na semantica do header

--- a/css/header.css
+++ b/css/header.css
@@ -11,10 +11,13 @@ header {
     padding-bottom: .90rem;
 }
 
-.teste {
+.header-nav-ul {
     color: #ffffff;
     font-size: 18px;
     font-weight: 700;
+
+    display: flex;
+    flex-direction: row;
 }
 
 .header-nav-link {
