--- a/css/respnsive.css
+++ b/css/respnsive.css
@@ -1,3 +1,17 @@
 @media screen and (max-width: 480px) {
+    .main-box-one {
+        display: flex;
+        flex-direction: column;
+        
+    }
+
+    .header-mobile-img1 {
+        width: 375px;
+        height: 300.8px;
+        display: block;
+    }
+}
+
+@media screen and (max-width: 1024px) {
     
 }
