--- a/css/main.css
+++ b/css/main.css
@@ -6,11 +6,12 @@
     justify-content: space-between;
 }
 
+
 .main-box-one-img1 {    
     display: inline-flex;
     
     margin-bottom: 212.92px;
-    padding-top: 100px;
+    padding-top: 200px;
 }
 
 .main-box-one-titlle {
@@ -85,7 +86,7 @@
     padding-bottom: 190px;
 }
 
-.main-section-three {
+.main-section-contact {
     display: flex;
 
     padding-right: 3%;
