--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -16,6 +16,53 @@ body{
     grid-area: header;
 
     height: 70px;
+
+    display: flex;
+
+    align-items: center;
+    justify-content: space-between;
+}
+
+.dropbtn{
+    cursor: pointer;
+
+    background-color: transparent;
+    border: none;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #2980B9;
+}
+
+.dropdown-content{
+    position: absolute;
+    min-width: 200px;
+
+    background-color: #f1f1f1;
+
+    display: none;
+
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd
+}
+    
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+}
+
+.show {
+    display: block;
 }
 
 .l-main{
@@ -37,7 +84,6 @@ body{
     background-color: var(--azul-marinho-escuro);
     grid-area: footer;
     height: 125px;
-
 }
 
 .logo {
