--- a/assets/css/respnsive.css
+++ b/assets/css/respnsive.css
@@ -146,9 +146,11 @@
 }
 
 @media screen and (min-width: 800px) {
-    .section-mobile-opnions {
+    .section-mobile-opnions, .dropdown {
         display: none;
     }
+
+    
 }
 
 
