--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,3 +14,111 @@
     padding-right: 6%;
 }
 
+body{
+    display: grid;
+
+    grid-template-areas: 
+        "header header header"
+        "main main main"
+        "footer footer footer";
+
+    grid-template-columns: 1fr;
+
+    grid-row-gap: 10px;
+}
+
+.l-header{
+    background-color: var(--azul-marinho-escuro);
+    grid-area: header;
+
+    height: 70px;
+
+    display: flex;
+
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo {
+    width: 159px;
+    height: 39px;
+}
+
+.dropbtn{
+    cursor: pointer;
+
+    background-color: transparent;
+    border: none;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #2980B9;
+}
+
+.dropdown-content{
+    position: absolute;
+    min-width: 200px;
+
+    background-color: #f1f1f1;
+
+    display: none;
+
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    right: 0;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd
+}
+    
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+}
+
+.show {
+    display: block;
+}
+
+.l-main{
+    grid-area: main;
+   
+    margin: 0 auto;
+
+    padding: 60px;
+
+    max-height: 400px;
+    overflow: auto;
+}
+
+.social-icons {
+    display: flex;
+    flex-direction: row;
+
+    margin: 0 auto;
+}
+
+.l-footer{
+    background-color: var(--azul-marinho-escuro);
+    grid-area: footer;
+    height: 125px;
+}
+
+.icons {
+    padding-right: 50px;
+    margin: 40px auto 0 auto;
+}
+
+.icons:nth-child(3n) {
+    padding-right: 0px; 
+}
+
+
+
