--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,7 +62,8 @@ body{
 
 .dropdown-content{
     position: absolute;
-    min-width: 200px;
+    min-width: 180px;
+
 
     background-color: #f1f1f1;
 
@@ -79,8 +80,12 @@ body{
     
 .dropdown-content a {
     color: black;
-    padding: 12px 16px;
+    padding: 10px;
     text-decoration: none;
+}
+
+.dropdown-content li {
+    padding: 10px;
 }
 
 .show {
