--- a/assets/css/respnsive.css
+++ b/assets/css/respnsive.css
@@ -35,14 +35,17 @@
     }
 
     .main-section-one-button {
-        width: 100%;
-        padding: 5px 100px;
+        width: 200px;;
+        padding: 20px;
         margin-bottom: 10px;
+        font-size: 24px;
+
+        
     }
 
     .main-section-one-img {
-        width: 375px;
-        height: 300.8px;
+        width: 300px;
+        height: 300px;
         margin: 20px auto;
         padding: 0;
         align-items: center;
